2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-lookup.c (diskfs_S_dir_lookup): Use ports_get_send_right.

	* io-reauthenticate.c (diskfs_S_io_reauthenticate): Use
	ports_get_send_right.

	* boot-start.c (diskfs_start_bootstrap): Use ports_get_send_right.
	(diskfs_execboot_fsys_startup): Use ports_get_send_right.
	(diskfs_S_fsys_init): Use ports_get_send_right.
	(start_execserver): Use ports_get_send_right.

2000-02-27  Roland McGrath  <roland@baalperazim.frob.com>

	* file-exec.c (diskfs_S_file_exec): Give the new peropen for the exec
	server O_EXEC permission as well as O_READ.

2000-01-25  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-lookup.c (diskfs_S_dir_lookup): Follow symlink despite flags if
	MUSTBEDIR is set (i.e. there was a trailing slash).

2000-01-24  Roland McGrath  <roland@baalperazim.frob.com>

	* rdwr-internal.c (_diskfs_rdwr_internal): Short-circuit return for
	zero-length transfer to avoid side effects, as POSIX requires.

1999-12-13  Roland McGrath  <roland@baalperazim.frob.com>

	Rewrite of a fix provided by Bill White <bill.white@griggsinst.com>:
	* fhandle.h (union diskfs_fhandle): Replaces struct diskfs_fhandle.
	Use a union element of char[28] to ensure size requirement.
	* fsys-getfile.c (diskfs_S_fsys_getfile): Update uses for new type.
	* file-getfh.c (diskfs_S_file_getfh): Likewise.

1999-12-02  Mark Kettenis  <kettenis@gnu.org>

	* io-read.c (diskfs_S_io_read): Add braces to silence gcc
	warning.

1999-11-09  Roland McGrath  <roland@baalperazim.frob.com>

	* priv.h (_diskfs_chroot_directory): Remove const from type.
	* init-startup.c (_diskfs_chroot_directory): Likewise.

1999-11-08  Roland McGrath  <roland@baalperazim.frob.com>

	* disk-pager.c (fault_handler): Put more detail in assert failures.

1999-10-28  Roland McGrath  <roland@baalperazim.frob.com>

	* node-nput.c (diskfs_nput): Call diskfs_set_node_times before
	diskfs_lost_hardrefs.  This should address the late mtime update