@@ -1,3 +1,13 @@
+2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* boot-start.c (diskfs_S_fsys_init, diskfs_start_bootstrap): Don't
+	use MOVE_SEND in Hurd RPC. 
+
+	* file-exec.c (diskfs_S_file_exec): Don't use MAKE_SEND in Hurd
+	RPC. 
+	* init-startup.c (diskfs_startup_diskfs, _diskfs_init_completed):
+	Likewise. 
+
 2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* dir-lookup.c (diskfs_S_dir_lookup): Use ports_get_send_right.
